# web3-voting-app

./: .gitignore  RAPORT.md  README.md  system-architecture.drawio
backend/: Cargo.toml  Makefile  docker-compose.local.yaml
backend/src/: .env  app_state.rs  main.rs
backend/src/api/: auth.rs  jwt.rs  middleware.rs  mod.rs  poll.rs
backend/src/models/: db.rs  mod.rs  poll.rs  user.rs  vote.rs
backend/src/utils/: error.rs  jwt.rs  response.rs
backend/web3-voting-app-backend/: Cargo.toml  Makefile
backend/web3-voting-app-backend/src/: main.rs
backend/web3-voting-app-backend/src/api/: auth.rs  middleware.rs
backend/web3-voting-app-backend/src/models/: db.rs  user.rs
backend/web3-voting-app-backend/src/utils/: error.rs  jwt.rs  mod.rs  nonce.rs
backend/web3-voting-app-backend/tests/: quick_dev.rs
frontend/: .env.local  package.json  tsconfig.json
frontend/src/: jwt.ts  middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.css  page.tsx  providers.tsx
frontend/src/components/: apiTest.tsx  createPoll.tsx  header.tsx  historyTable.tsx  historyVote.tsx  login.tsx  myPollForm.tsx  myPollsTable.tsx  navbar.tsx  pollForm.tsx  pollTable.tsx  (+1 more)
frontend/web3-voting-app/: docker-compose-local.yml  package.json
smart-contracts/: .env  .gitignore  .prettierrc  hardhat.config.ts  helper-hardhat-config.ts  package.json
smart-contracts/contracts/: PollSystem.sol
smart-contracts/deploy/: 01-deploy-PollSystem.ts  98-create-mock-polls.ts  99-update-frontend.ts
smart-contracts/test/: pollSystem.test.ts
smart-contracts/utils/: verify.ts
(+55 files in other folders)
