[package]
name = "web3-voting-app-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# server
axum = "0.7.4"
tokio = { version = "1.37.0", features = ["full"]}

# env
dotenvy = "0.15.7"

# serde
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

# mongodb
mongodb = "2.8.2"

# web3
ethers = "2.0.14"

# crypto
rand = "0.8.5"
hex = "0.4.3"

# jwt
jsonwebtoken = "9.3.0"

# datetimes
chrono = "0.4.38"

# cors
tower-http = { version = "0.5.2", features = ["cors"] }

[dev-dependencies]
anyhow = "1.0.82"
httpc-test = "0.1.9"




